samples/_failures_safe/1761040060_8841c3_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_ef506888.c: In function ‘main’:
./samples/SAFE/__tmp_ef506888.c:183:9: error: expected declaration or statement at end of input
  183 |         if (k >= token_count) break;
      |         ^~
./samples/SAFE/__tmp_ef506888.c:183:9: error: expected declaration or statement at end of input
